gcc/testsuite/rust/rustc/ui/impl-trait/precise-capturing/self-capture_dg.rs
trait Foo {
    fn bar<'a>() -> impl Sized + use<Self>;
// { dg-error "" "" { target *-*-* } .-1 }
}

fn main() {}

